# ix64

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  notes.md
arch/arm/: cpu.h  init.S  irq.S  paging.S
asm/: init.asm  init.s  interrupts.asm  interrupts.s  io.s  irq.s  isr.s
boot/: grub.cfg
drivers/: keyboard.c  video.c
etc/: link.ld
include/: stdarg.h  stddef.h  string.h
include/drivers/: keyboard.h  video.h
include/ix/: irq.h  kprintf.h  pmm.h  timer.h  version.h  vmm.h
include/kernel/: interrupts.h  io.h  kprint.h  machine.h  memory.h  multiboot.h  paging.h  video.h
kernel/: interrupts.c  interrupts.cc  irq.c  kprint.c  kprint.cc  kprintf.c  machine.cc  main.c  main.cc  memory.c  paging.c  pmm.c  timer.c  video.c  video.cc  vmm.c
lib/: string.c
tools/: grub.sh  iso.sh  link.ld  qemu.sh
